--- a/web/media/templates/media/album_view.html
+++ b/web/media/templates/media/album_view.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Job Status{% endblock %}
+{% block title %}Album{% endblock %}
 {% block content %}
 
 Album: {{album.name}} - {{album.description}}
