--- a/web/media/templates/media/comp/media_preview.html
+++ b/web/media/templates/media/comp/media_preview.html
@@ -3,7 +3,11 @@
   <a href="{% url 'media:media_edit' media_id=media.id %}">
       <div class="preview-container">
         <div class="image">
-          <img src={% media media.web_thumbnail_path %} alt="{{media.sort_order}}-{{media.content_hash}}" title="{{media.sort_order}}-{{media.content_hash}}" />
+          <img class="lazy"
+            src="{% asset 'img/placeholder-thumbnail.png' %}"
+            data-src={% media media.web_thumbnail_path %}
+            alt="{{media.sort_order}}-{{media.content_hash}}"
+            title="{{media.sort_order}}-{{media.content_hash}}" />
         </div>
         {% if media.extension == 'mp4' %}
           <div class="top-overlay">VIDEO</div>
@@ -11,7 +15,7 @@
           <div class="top-overlay">WEBM</div>
         {% endif %}
         <div class="bottom-overlay">
-        {{media.byte_size}}
+        {{media.display_size}}
         </div>
       </div>
   </a>
