--- a/asset/css/mediacrity.css
+++ b/asset/css/mediacrity.css
@@ -5,28 +5,15 @@ body {
 
 .fluid-container{
   display: inline-flex;
-  width: 100px;
-  height: 100px;
-}
-
-@media (min-width: 1000px) {
-  .fluid-container{
-    display: inline-flex;
-    width: 150px;
-    height: 150px;
-  }
+  width: 16vh;
+  height: 16vh;
 }
 
 .image img{
-    width: 100%;
-    height: 100%;
-}
-
-@media (min-width: 1000px) {
-  .image img{
-    width: 150px;
-    height: 150px;
-  }
+  max-width: 100%;
+  max-height: 100%;
+  width: 16vh;
+  height: 16vh;
 }
 
 .page-container{
@@ -69,15 +56,15 @@ body {
 
 img {
     max-width: 100%;
-    max-height: 700px;
+    max-height: 40vh;
     display: block;
     margin: 0 auto;
 
 }
 
 video {
-    max-width: 100%;
-    max-height: 600px;
+    width: 100%;
+    max-height: 40vh;
     display: block;
     margin: 0 auto;
 }
@@ -161,13 +148,36 @@ li a .overlay{
   width: 60%;
 }
 
-.nav-button{
-  max-width: 90%;
-  margin: auto;
+.action-link {
+  font-size: 2vh;
+  width: 15%;
+  height: 8vh;
 }
 
-.nav-button button {
-  margin: 5px 5px;
+.landing {
+  text-align:center;
+  font-size:80px;
+}
+p > input {
+  font-size: 80px;
+  max-width: 80%;
+}
+
+.login-btn {
+  font-size: 8vh;
+  width: 80%;
+}
+
+.search-input {
+  width:60%;
+  height: 5vh;
+  font-size: 2vh;
+}
+
+.search-submit {
+  width:30%;
+  height: 6vh;
+  font-size: 3vh;
 }
 
 .meta-block{
@@ -186,4 +196,8 @@ li a .overlay{
 textarea {
   width: 85%;
   height: 700px;
+}
+
+.list-link {
+  font-size: 3vh;
 }
