--- a/web/media/templates/media/album_list.html
+++ b/web/media/templates/media/album_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Sources{% endblock %}
+{% block title %}Albums{% endblock %}
 {% block content %}
 
 {% if albums %}
