--- a/web/media/templates/media/job_list.html
+++ b/web/media/templates/media/job_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Job Status{% endblock %}
+{% block title %}Job List{% endblock %}
 {% block content %}
 
 <br/>
