--- a/web/media/templates/media/search_results.html
+++ b/web/media/templates/media/search_results.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Job Status{% endblock %}
+{% block title %}Search Results{% endblock %}
 {% block content %}
 
 {% if media %}
